
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.28.1]]
== 0.28.1 (TBD)

icon:plus[] Demo: The example uuids and dates in the `/api/v1/raml` response and the documentation are now static and will no longer change between releases. link:https://github.com/gentics/mesh/issues/477[#477]

icon:plus[] Core: Deletion of micronode and list field data has been implemented in the core. Previously these elements were not removed from the graph. link:https://github.com/gentics/mesh/issues/192[#192]

icon:check[] Core: Fixed a bug that caused link:https://getmesh.io/docs/api/#project__branches__branchUuid__migrateSchemas_post[/migrateSchemas] to fail when a newer schema version was not assigned to the branch. link:https://github.com/gentics/mesh/issues/532[#532]

icon:check[] Core: Nodes are now migrated to the newest schema version when a new branch is created. link:https://github.com/gentics/mesh/issues/521[#521]

icon:check[] Core: Fixed a bug that prevented moving a published node in one language to a published container of another language.

[[v0.28.0]]
== 0.28.0 (20.11.2018)

CAUTION: The property `meshNodeId` of the `/api/v1/` response was renamed to `meshNodeName` to be more consistent.

icon:plus[] REST: It is now possible to set existing or new tags during node creation and node update. Tags that are listed in both of those requests will be created if not found and assigned to the updated or created node.

icon:plus[] Eventbus: It is now possible to register custom eventbus addresses.

icon:plus[] REST: Download of binaries will now support byte range requests. Web media players require this feature in order to support seeking in video streams.

icon:plus[] API: Make OAuth2 Server options overrideable via environment variables.
